# contextual-assistant

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  assistant-demo.db  pyproject.toml  requirements.txt
data/: sample_notes.jsonl
docs/: architecture.md  thinking-agent-design.md
docs/decisions/: 0001-schema-simplification.md  0002-extraction-strategy.md
scripts/: demo_ingest.sh  docker_exec.sh  docker_run.sh  init_db.py  release_ingestion_prompt.py  release_prompt.py  run_eval.py  run_thinking.py  seed_demo_data.py
src/assistant/agents/: __init__.py  context_agent.py  ingestion_agent.py  organization_agent.py  thinking_agent.py
src/assistant/config/: logging.py  settings.py
src/assistant/db/: __init__.py  base.py  connection.py  models.py  repo_cards.py  repo_context.py  repo_context_snapshot.py  repo_envelopes.py  repo_events.py  repo_suggestions.py  schema.sql
src/assistant/llm/: __init__.py  client.py  client_factory.py  parsing.py  types.py
src/assistant/orchestration/: ingestion_agent.py  thinking_scheduler.py
src/assistant/persistence/: db.py  models.py
tests/fixtures/: notes_golden_dataset.json
tests/integration/: test_ingestion_flow.py  test_thinking_cycle.py
tests/unit/: test_context_evidence.py  test_context_schema.py  test_context_snapshot_repo.py  test_embeddings.py  test_envelope_matcher.py  test_envelope_profile.py  test_fallback_extraction.py  test_prompt_loader.py  test_prompt_version_overrides.py  test_repo_limits.py  test_scoring.py  test_settings.py  test_time_parser.py
(+80 files in other folders)
