[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextual-assistant"
version = "0.1.0"
description = "Contextual personal assistant prototype"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "dateparser>=1.2",
  "eval-type-backport>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "openai>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
assistant = "assistant.interfaces.cli.app:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
